# Terrario-2

./: .gitignore  README.md  Requirements.txt  Terrario.pyw  pyproject.toml  requirements.txt  terrario.pyw
Classes/: Constants.py  Game.py  GlobalInstance.py  Map.py  Player.py  Props.py  button.py  constants.py  game.py  map.py  menu.py  player.py  prop.py  props.py  saving.py  textures.py  tile.py
Props/: cactus_4.csv  crystal_1.csv  crystal_2.csv  crystal_3.csv  crystal_4.csv  giant_brown_mushroom.csv  giant_red_mushroom.csv  ice_stalagmite_1.csv  ice_stalagmite_2.csv  ice_stalagmite_3.csv  oak_tree.csv  oak_tree_3.csv  stalagmite_1.csv  stalagmite_3.csv
classes/: button.py  constants.py  game.py  menu.py  player.py  prop.py  saving.py  textures.py  tile.py
props/: lamp.csv  oak_tree_2.csv  stalagmite_2.csv
src/terrario/: __main__.py  game.py  map.py  player.py  prop.py  props.py  tile.py
src/terrario/Props/: cactus_1.csv  cactus_2.csv  cactus_3.csv  fir_1.csv  fir_2.csv  oak_tree_1.csv  snowman.csv
