[project]
name = "terrario"
version = "0.0.13"
authors = [{name="MaitreRenard18", email="maitre.renardowo@gmail.com"}, {name="Wagister"}]
description = "A 2D mining game made with Pygame."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.6"
dependencies = [
    "pygame>=2.1.1",
    "opensimplex",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/MaitreRenard18/Terrario-2"
"Bug Tracker" = "https://github.com/MaitreRenard18/Terrario-2/issues"


[project.gui-scripts]
terrario = "terrario:Game"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"terrario" = ["Images/**", "Props/**"]
